--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <META name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Noddy!</title>
+    <title>Welcome to Notes!</title>
 
     <!-- styles -->
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
@@ -11,7 +11,6 @@
     {% style "/css/screen.css" %}
   </head>
   <body>
-      <!-- navbar -->
       <nav class="navbar navbar-dark bg-primary" role="navigation">
           <button class="navbar-toggler hidden-sm-up"
                   type="button"
@@ -20,7 +19,7 @@
               &#9776;
           </button>
           <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
-              <a class="navbar-brand" href="{{servlet-context}}/">Noddy App!</a>
+              <a class="navbar-brand" href="{{servlet-context}}/">Some Notes!</a>
               <ul class="nav navbar-nav">
                   <li class="nav-item">
                       <a href="{{servlet-context}}/"
@@ -38,22 +37,22 @@
           </div>
       </nav>
 
-    <div class="container">
-      {% block content %}
+      <div class="container">
+        {% block content %}
+        {% endblock %}
+      </div>
+
+      <!-- scripts -->
+      {% script "/assets/jquery/jquery.min.js" %}
+      {% script "/assets/tether/dist/js/tether.min.js" %}
+      {% script "/assets/bootstrap/js/bootstrap.min.js" %}
+
+      <script type="text/javascript">
+        var context = "{{servlet-context}}";
+      </script>
+      {% script "/js/app.js" %}
+      {% block page-scripts %}
       {% endblock %}
-    </div>
-
-    <!-- scripts -->
-    {% script "/assets/jquery/jquery.min.js" %}
-    {% script "/assets/tether/dist/js/tether.min.js" %}
-    {% script "/assets/bootstrap/js/bootstrap.min.js" %}
-
-    <script type="text/javascript">
-      var context = "{{servlet-context}}";
-    </script>
-    {% script "/js/app.js" %}
-    {% block page-scripts %}
-    {% endblock %}
 
   </body>
 </html>
